<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultsPage_End"
    android:background="@color/background_color">

    <EditText
        android:id="@+id/Timetaken"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="172dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/Timetaken"
        android:textSize="50sp"
        android:background="@drawable/shapeet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.257"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/Accuracy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/shapeet"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/accuracy"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.257"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.453" />

    <Button
        android:id="@+id/History"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_marginEnd="80dp"
        android:layout_marginRight="88dp"
        android:layout_marginBottom="132dp"
        android:text="@string/view_history"
        android:textSize="36sp"
        android:background="@drawable/shapestart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/MainMenu"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_marginStart="88dp"
        android:layout_marginLeft="88dp"
        android:layout_marginBottom="132dp"
        android:text="@string/button_Mainmenu"
        android:textSize="36sp"
        android:background="@drawable/shapestart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/timetakenvalue"
        android:layout_width="627dp"
        android:layout_height="144dp"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="3 Min 50 Seconds"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.296"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Timetaken" />

    <EditText
        android:id="@+id/accuracyvalue"
        android:layout_width="627dp"
        android:layout_height="144dp"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="50 %"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.296"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Accuracy" />

    <EditText
        android:id="@+id/Results_a_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/shapeet"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/Results_end_title"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.222"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>