<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultsPage_A"
    android:background="@color/background_color">
    <EditText
        android:id="@+id/Timetaken_a"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="172dp"
        android:background="@drawable/shapeet"
        android:ems="10"
        android:text="@string/Timetaken"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.257"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/Accuracy_a"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/shapeet"
        android:ems="10"
        android:text="@string/accuracy"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.257"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.453" />


    <EditText
        android:id="@+id/timetakenvalue"
        android:layout_width="627dp"
        android:layout_height="144dp"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:text="3 Min 50 Seconds"
        android:textSize="60sp"
        android:background="@drawable/shapeet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.296"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Timetaken_a" />

    <EditText
        android:id="@+id/accuracy_a_value"
        android:layout_width="627dp"
        android:layout_height="144dp"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:text="50 %"
        android:textSize="60sp"
        android:background="@drawable/shapeet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.296"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Accuracy_a" />

    <EditText
        android:id="@+id/Results_a_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:text="@string/Results_a_title"
        android:textSize="50sp"
        android:textStyle="bold"
        android:background="@drawable/shapeet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.222"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/Results_a_next"
        android:layout_width="734dp"
        android:layout_height="119dp"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginBottom="188dp"
        android:text="Next"
        android:textSize="36sp"
        android:background="@drawable/shapestart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>